# tip-calculator

./: README.md  STUTOR_INSTRUCTIONS.md  tip_calculator
.github/checker/: meson.build
.github/checker/test/: test_1.c  test_2.c  test_3.c  test_4.c
src/: main.c  tip_calculator.c  tip_calculator.h
